--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ tauri-build = { version = "1.5", features = [] }
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all"] }
+tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open-api"] }
 
 [[bin]]
 name = "onemditor"
