--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "eslint \"src/**/*.{ts,tsx,vue}\"",
+    "format": "prettier --write \"src/**/*.{ts,tsx,vue,json,md}\""
   },
   "dependencies": {
     "@milkdown/core": "^7.3.5",
@@ -24,7 +26,14 @@
     "@tauri-apps/cli": "^1.5.9",
     "@types/node": "^20.11.5",
     "@vitejs/plugin-vue": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.20.0",
     "less": "^4.2.0",
+    "prettier": "^3.2.5",
     "typescript": "^5.4.0",
     "vite": "^5.1.0",
     "vue-tsc": "^1.8.27"
